added heading, photo of myself, and about me section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
   <title>Independent Project</title>
 </head>
 <body>
+  <h1>My name is Rex Vongphouthone</h1>
+  <img src="img/Amber & Rex 59.jpg" alt="My wedding photo.">
   
+  <p>I am a newly wed and also a newbie when it comes to coding.</p>
+  
+  <h2>A little something about me</h2>
 
+  <p>I have been married for eight months now, but have been in a relationship with my wife for seven years. 
+    She is my <strong>everything!</strong> 
+    I graduated from Redmond High School in 2008. 
+    I wanted to be a pharmacist, but things had gotten in my way to which I did not have the mental and emotional capacity to proceed. 
+    I ended up choosing another career path and became a licensed Hearing Instrument Specialist. 
+    I earned that degree from Spokane Falls Community College. 
+    Currently, I am working at the Costco Hearing Aid Center in Lynnwood. 
+    This will be my third year there. 
+    I followed my late father's footsteops into this career path. 
+    My associate has a partner who had attended Epicodus, which is how I became interested in a second career path.</p>
+
+    <p>So far at Epicodus, I have learn so much about the coding languages. 
+      I took it upon myself to <em>Learn Python the Hard Way</em>, which is a book by Zed A. Shaw that I started reading as an introduction to what I was getting myself into. 
+      I am having a lot of fun with this course and would love to start a new life within this career!</p>
 
 </body>
 
