styling with classes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <h2>A little something about me:</h2>
 
-  <p>I was born in Honolulu, HI. We nearly immediately moved to Minneapolis, MN and lived there til I was four years old. 
+  <p class="author">I was born in Honolulu, HI. We nearly immediately moved to Minneapolis, MN and lived there til I was four years old. 
     My mom's side of the family had moved to WA so we then moved to Bellevue. I grew up in Redmond my whole life.  
     I graduated from Redmond High School in 2008. 
     I wanted to be a pharmacist, but things had gotten in my way to which I did not have the mental and emotional capacity to proceed. 
@@ -25,9 +25,11 @@
     I followed my late father's footsteops into this career path. 
     My associate has a partner who had attended Epicodus, which is how I became interested in a second career path.</p>
 
-  <p>So far at Epicodus, I have learn so much about the coding languages. 
+  <p class="important">So far at Epicodus, I have learn so much about the coding languages. 
     I took it upon myself to <em>Learn Python the Hard Way</em>, which is a book by Zed A. Shaw that I started reading as an introduction to what I was getting myself into. 
     I am having a lot of fun with this course and would love to start a new life within this career!</p>
+
+  <h3></h3>
 
 </body>
 
