added divs and lists

--- a/index.html
+++ b/index.html
@@ -25,12 +25,35 @@
     I followed my late father's footsteops into this career path. 
     My associate has a partner who had attended Epicodus, which is how I became interested in a second career path.</p>
 
-  <p class="important">So far at Epicodus, I have learn so much about the coding languages. 
+  <div class="important">
+  <p>So far at Epicodus, I have learn so much about the coding languages. 
     I took it upon myself to <em>Learn Python the Hard Way</em>, which is a book by Zed A. Shaw that I started reading as an introduction to what I was getting myself into. 
     I am having a lot of fun with this course and would love to start a new life within this career!</p>
 
-  <h3></h3>
+  <h3>A few of my projects at Epicodus:</h3>
+  <ul>
+    <li>Hello-world</li>
+    <li>Goodbye</li>
+    <li>Cookie-recipe</li>
+    <li>Pets</li>
+    <li>My-first-webpage</li>
+    <li>Paragraphs</li>
+    <li>Cupcakes</li>
+    <li>JerkyBiz</li>
+  </ul>
+  <h3>Brief description of my projects at Epicodus:</h3>
+  <ol>
+    <li>Hello-world</li>
+    <li>Goodbye</li>
+    <li>Cookie-recipe</li>
+    <li>Pets</li>
+    <li>My-first-webpage</li>
+    <li>Paragraphs</li>
+    <li>Cupcakes</li>
+    <li>JerkyBiz</li>
+  </ol>
 
+  </div>
 </body>
 
 
