--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     I followed my late father's footsteops into this career path. 
     My associate has a partner who had attended Epicodus, which is how I became interested in a second career path.</p>
 
-  <div class="important">
   <p>So far at Epicodus, I have learn so much about the coding languages. 
     I took it upon myself to <em>Learn Python the Hard Way</em>, which is a book by Zed A. Shaw that I started reading as an introduction to what I was getting myself into. 
     I am having a lot of fun with this course and would love to start a new life within this career!</p>
 
+  <div class="important">
   <h3>A few of my projects at Epicodus:</h3>
   <ul>
     <li>Hello-world</li>
@@ -43,14 +43,14 @@
   </ul>
   <h3>Brief description of my projects at Epicodus:</h3>
   <ol>
-    <li>Hello-world</li>
-    <li>Goodbye</li>
-    <li>Cookie-recipe</li>
-    <li>Pets</li>
-    <li>My-first-webpage</li>
-    <li>Paragraphs</li>
-    <li>Cupcakes</li>
-    <li>JerkyBiz</li>
+    <li>Hello-world: learned about block elements, how to create an <span class="language">html</span> directory, and write in <span class="language">html</span> language.</li>
+    <li>Goodbye: better learned how to create a github repository as well as write in <span class="language">html</span> using proper indentation along the way.</li>
+    <li>Cookie-recipe: finally</li>
+    <li>Pets:</li>
+    <li>My-first-webpage:</li>
+    <li>Paragraphs:</li>
+    <li>Cupcakes:</li>
+    <li>JerkyBiz:</li>
   </ol>
 
   </div>
