fixed bug in css using overflow hidden

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <h2>A little something about me:</h2>
 
-  <p class="author">I was born in Honolulu, HI. We nearly immediately moved to Minneapolis, MN and lived there til I was four years old. 
+  <p class="author">I was born in Honolulu, HI. We immediately moved to Minneapolis, MN and lived there til I was four years old. 
     My mom's side of the family had moved to WA so we then moved to Bellevue. I grew up in Redmond my whole life.  
     I graduated from Redmond High School in 2008. 
     I wanted to be a pharmacist, but things had gotten in my way to which I did not have the mental and emotional capacity to proceed. 
