add another image and floated it right

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   </ol>
   </div>
 
-  <div class="interests">
-  <p>Other than coding being my new interest and hobby, I really enjoy:</p>
+  <div class="hobby">
+  <p span class="bold">Other than coding being my new interest and hobby, I really enjoy:</span></p>
   <ul>
     <li>Bike riding trails with my wife.</li>
     <li>Going on hikes and adventrues.</li>
@@ -64,12 +64,16 @@
     <li>Grocery shopping at local farmer's markets.</li>
     <li>Reading books and listening to interesting podcasts about health and spirituality.</li>
   </ul>
-  <p>A few skills I'd like to share with you:</p>
+  <p span class="bold">A few skills I'd like to share with you:</span></p>
+  <ul>  
     <li>Cooking: Creating and finding new recipes with my wife.</li>
     <li>Boxing and Muay Thai.</li>
     <li>Write songs and raps to instrumental beats.</li>
     <li>Driving.</li>
   </ul>
+  </div>
+  <div class="right">
+    <img src="img/vaca.jpg" alt="Turks and Cacos.">
   </div>
 </body>
 
