add box element to p.intro

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     This will be my third year there. 
     I followed my late father's footsteops into this career path. 
     One of my co-workers has a partner who had attended Epicodus, which is how I became interested in this second career path.</p>
-  <p>So far at Epicodus I have learned so much about the coding languages. 
+  <p class="epicodus">So far at Epicodus I have learned so much about the coding languages. 
     Prior to attending Epicodus, I took it upon myself to <em>Learn Python the Hard Way</em>, which is a book by Zed A. Shaw, that I started reading as an introduction to what I was getting myself into. 
     I am having a lot of fun with this course and would love to start a new life within this career! 
     My current dev-team have been great!</p>
