add final index.html and styles.css files to gh-pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <img src="img/Amber & Rex 59.jpg" alt="My wedding photo.">
   <img src="img/honolulu.jpg" alt="honolulu" class="float">
   <p class="intro">I am a newly wed and also a newbie when it comes to coding.</p>
-  <div class="head"><h2>A little something about me:</h2></div>
+  <h2 class="head">A little something about me:</h2>
   <p class="author">I was born in Honolulu, HI. I am a first generation Laotian/American. After Hawaii my family moved to Minneapolis, MN and I lived there until I was four years old. 
     My mom's side of the family moved to WA, so my family followed and moved to Bellevue. I grew up in Redmond my whole life.  
     I graduated from Redmond High School in 2008. 
@@ -26,7 +26,7 @@
     Prior to attending Epicodus, I took it upon myself to <em>Learn Python the Hard Way</em>, which is a book by Zed A. Shaw, that I started reading as an introduction to what I was getting myself into. 
     I am having a lot of fun with this course and would love to start a new life within this career! 
     My current dev-team have been great!</p>
-  <div class="head3"><h3>A few of my projects at Epicodus and links to my GitHub repository:</h3>
+  <h3 class="head3">A few of my projects at Epicodus and links to my GitHub repository:</h3>
   <ul class="important">
     <li>Hello-world: <a href="https://github.com/vrex808/hello-world">GitHub repo</a></li>
     <li>Goodbye: <a href="https://github.com/vrex808/goodbye">GitHub repo</a></li>
@@ -72,3 +72,4 @@
   </div>
 </body>
 </html>
+
